# codeviz

./: .gitignore  README.md  __init__.py  cli.py  config.py  logging_conf.py  pyproject.toml  report_to_prompt.py  setup.py
analyzers/: README.md  __init__.py  base.py  js_analyzer.py  markdown_analyzer  project_analyzer  python_analyzer.py
discharge/: README.md  analyze_embeddings.py  chat_extract.js  chat_processor.py  code_scanner.py  context_bridge.py  embeddings_utils.py
docs/: README.md  usage_examples.md
models/: __init__.py  file_summary.py  report.py
services/: README.md  __init__.py  context_summarizer.py  directory_tree.py  openai_embeddings.py
